fix ourTeam spacing

--- a/src/style/ourTeam.scss
+++ b/src/style/ourTeam.scss
@@ -1,6 +1,5 @@
 .ourTeam {
     padding: 2%;
-    height: 40vh;
 }
 
 .ourTeam_title {
